# natural-uncertainty-library

./: .gitignore  CMakeLists.txt  Makefile
criterions/: Criterion.cpp  Criterion.h  MaximinCriterion.cpp  MaximinCriterion.h  OptimismPessimismCriterion.cpp  OptimismPessimismCriterion.h  PrincipleOfInsufficientReason.cpp  PrincipleOfInsufficientReason.h  SolveStatus.cpp  SolveStatus.h
criterions/probabilityuncertainty/: AverageResultCriterion.cpp  AverageResultCriterion.h  BayesCriterion.cpp  BayesCriterion.h  ProbabilityCriterion.cpp  ProbabilityCriterion.h
criterions/tasklog/: TaskStep.cpp  TaskStep.h
criterions/totaluncertainty/: Criterion.h  MaximinCriterion.cpp  MaximinCriterion.h  OptimismPessimismCriterion.cpp  OptimismPessimismCriterion.h  PrincipleOfInsufficientReason.cpp  PrincipleOfInsufficientReason.h  UncertaintyCriterion.h
mathmodel/: Alternative.cpp  Alternative.h  MathModel.cpp  MathModel.h  ProbabilisticAlternative.cpp  ProbabilisticAlternative.h  ProbabilisticModel.cpp  ProbabilisticModel.h  Uncertainty.cpp  Uncertainty.h
wrapper/csharp/: natural-uncertainty-lib.i  natural-uncertainty-lib.l  natural-uncertainty-lib_wrap.cxx
